1.0.7 I fixed a lot of warning messages for some classes.